--- a/experiments/mpii/tokenpose/tokenpose_l_D6_256x256_patch44_dim192_depth6.yaml
+++ b/experiments/mpii/tokenpose/tokenpose_l_D6_256x256_patch44_dim192_depth6.yaml
@@ -4,12 +4,11 @@ CUDNN:
   DETERMINISTIC: false
   ENABLED: true
 DATA_DIR: ''
-GPUS: (0,1,2,3)
+GPUS: (0,)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
 WORKERS: 24
 PRINT_FREQ: 100
-
 DATASET:
   COLOR_RGB: true
   DATASET: mpii
@@ -17,7 +16,7 @@ DATASET:
   FLIP: true
   NUM_JOINTS_HALF_BODY: 8
   PROB_HALF_BODY: -1.0
-  ROOT: '/data/dataset/MPIHP'
+  ROOT: '/media/ljc/ljc/MPII'
   ROT_FACTOR: 30
   SCALE_FACTOR: 0.25
   TEST_SET: test
@@ -26,7 +25,7 @@ MODEL:
   INIT_WEIGHTS: true
   NAME: pose_tokenpose_l
   NUM_JOINTS: 16
-  PRETRAINED: '/data/pretrained/imagenet/hrnet_w48-8ef0771d.pth'
+  PRETRAINED: '/home/ljc/Github/TokenPose/pretrained/imagenet/hrnet_w48-8ef0771d.pth'
   TARGET_TYPE: gaussian
   BASE_CHANNEL: 48
   HIDDEN_HEATMAP_DIM: 384
@@ -38,7 +37,7 @@ MODEL:
   DIM: 192 # 4*4*3
   PATCH_SIZE:
   - 4
-  - 4  
+  - 4
   IMAGE_SIZE:
   - 256
   - 256
@@ -85,7 +84,7 @@ MODEL:
 LOSS:
   USE_TARGET_WEIGHT: true
 TRAIN:
-  BATCH_SIZE_PER_GPU: 16
+  BATCH_SIZE_PER_GPU: 2
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 300
@@ -101,7 +100,7 @@ TRAIN:
   MOMENTUM: 0.9
   NESTEROV: false
 TEST:
-  BATCH_SIZE_PER_GPU: 16
+  BATCH_SIZE_PER_GPU: 2
   MODEL_FILE: ''
   FLIP_TEST: true
   POST_PROCESS: true
