--- a/experiments/coco/tokenpose/crowdposepretrain.yaml
+++ b/experiments/coco/tokenpose/crowdposepretrain.yaml
@@ -7,8 +7,8 @@ DATA_DIR: ''
 GPUS: (0,)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 24
-PRINT_FREQ: 100
+WORKERS: 16
+PRINT_FREQ: 20
 
 DATASET:
   COLOR_RGB: true
@@ -17,15 +17,15 @@ DATASET:
   FLIP: true
   NUM_JOINTS_HALF_BODY: 8
   PROB_HALF_BODY: 0.3
-  ROOT: '/home/zhou/OCHuman/'
+  ROOT: '/home/zhou/COCO/'
   ROT_FACTOR: 45
   SCALE_FACTOR: 0.35
-  TEST_SET: 'test'
-  TRAIN_SET: 'val'
+  TEST_SET: 'val2017'
+  TRAIN_SET: 'train2017'
 MODEL:
   INIT_WEIGHTS: true
   NAME: pose_tokenpose_l
-  NUM_JOINTS: 17
+  NUM_JOINTS: 14
   PRETRAINED: '/home/zhou/NewTokenpose/TokenPose/output/mpii/pose_tokenpose_l/tokenpose_l_D6_256x256_patch44_dim192_depth6/checkpoint.pth'
   TARGET_TYPE: gaussian
   BASE_CHANNEL: 48
@@ -85,7 +85,7 @@ MODEL:
 LOSS:
   USE_TARGET_WEIGHT: true
 TRAIN:
-  BATCH_SIZE_PER_GPU: 64
+  BATCH_SIZE_PER_GPU: 48
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 600
