--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 EasyDict==1.7
-opencv-python==3.4.1.15
+opencv-python~=4.5.5.64
 shapely==1.6.4
-Cython
-scipy
+Cython~=0.29.28
+scipy~=1.7.3
 pandas
 pyyaml
 json_tricks
 scikit-image
 yacs>=0.1.5
-tensorboardX==1.6
+tensorboardX~=2.2
 einops==0.3.0
 timm==0.4.9
+
+numpy~=1.21.5
+setuptools~=61.2.0
+torchvision~=0.12.0
+pycocotools~=2.0.4
