--- a/experiments/coco/tokenpose/crowdposepretrain.yaml
+++ b/experiments/coco/tokenpose/crowdposepretrain.yaml
@@ -4,11 +4,11 @@ CUDNN:
   DETERMINISTIC: false
   ENABLED: true
 DATA_DIR: ''
-GPUS: (0,)
+GPUS: (0,1)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
 WORKERS: 16
-PRINT_FREQ: 20
+PRINT_FREQ: 200
 
 DATASET:
   COLOR_RGB: true
@@ -17,7 +17,7 @@ DATASET:
   FLIP: true
   NUM_JOINTS_HALF_BODY: 8
   PROB_HALF_BODY: 0.3
-  ROOT: '/home/zhou/COCO/'
+  ROOT: '/root/autodl-tmp/COCO/'
   ROT_FACTOR: 45
   SCALE_FACTOR: 0.35
   TEST_SET: 'val2017'
@@ -26,7 +26,7 @@ MODEL:
   INIT_WEIGHTS: true
   NAME: pose_tokenpose_l
   NUM_JOINTS: 14
-  PRETRAINED: '/home/zhou/NewTokenpose/TokenPose/output/mpii/pose_tokenpose_l/tokenpose_l_D6_256x256_patch44_dim192_depth6/checkpoint.pth'
+  PRETRAINED: '/root/autodl-tmp/dataset/checkpoint.pth'
   TARGET_TYPE: gaussian
   BASE_CHANNEL: 48
   HIDDEN_HEATMAP_DIM: 384
@@ -85,7 +85,7 @@ MODEL:
 LOSS:
   USE_TARGET_WEIGHT: true
 TRAIN:
-  BATCH_SIZE_PER_GPU: 48
+  BATCH_SIZE_PER_GPU: 72
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 600
@@ -102,7 +102,7 @@ TRAIN:
   NESTEROV: false
 TEST:
   BATCH_SIZE_PER_GPU: 16
-  COCO_BBOX_FILE: '/data/dataset/COCO_2017/COCO_val2017_detections_AP_H_56_person.json'
+  COCO_BBOX_FILE: '/root/autodl-tmp/dataset/COCO_2017/COCO_val2017_detections_AP_H_56_person.json'
   BBOX_THRE: 1.0
   IMAGE_THRE: 0.0
   IN_VIS_THRE: 0.2
